# agro_api

./: .db.env.example  .env.example  .gitignore  Dockerfile.dev  README.md  compose.yaml  docker-entrypoint.sh  pyproject.toml
agro_api/: app.py
agro_api/entities/: __init__.py  base.py  estate.py  estate_division.py  estate_plot.py  user.py
agro_api/repositories/: user.py
agro_api/routers/: auth.py  estate_plots.py  estates.py  users.py
agro_api/schemas/: __init__.py  common.py  estate.py  user.py
agro_api/services/: __init__.py  auth.py  base.py  estate.py  user.py
config/: database.py  geometry.py  jwt.py  security.py  settings.py  user.py
migrations/: env.py
migrations/versions/: 2feff8a1d25b_add_jti_to_users_table.py  6796e074b865_create_estates_table.py  9dda8d7bd758_create_users_table.py  e158cff5594c_create_users_table.py
tests/: conftest.py  test_app.py  test_jwt.py  test_security.py
tests/entities/: test_estate.py  test_estate_plot.py  test_user.py
tests/factories/: estates.py  users.py
tests/routers/: test_auth.py  test_estates.py  test_user.py  test_users.py
tests/services/: test_estate.py  test_user.py
